--- a/index.html
+++ b/index.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Site Responsivo</title>
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
+
   <header>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Sobre</a></li>
-        <li><a href="#">Serviços</a></li>
-        <li><a href="#">Contato</a></li>
+    <nav class="navbar">
+      <ul class="navbar-list">
+			<button id="btn-1" data-text="Junior Santti">
+				<span>O ARTISTA</span>
+			</button>
+			<button id="btn-2" data-text="O Gato Preto">
+				<span>ARTES PLÁSTICAS</span>
+			</button>
+			<button id="btn-3" data-text="Nome Quadrinho">
+				<span>QUADRINHO</span>
+			</button>
+			<button id="btn-4" data-text="Nome Ilustração">
+				<span>ILUSTRAÇÃO</span>
+			</button>
+            <button id="btn-5" data-text="Nome Cinema">
+                <span>CINEMA</span>
+            </button>
       </ul>
     </nav>
   </header>
