loading e navbar fixed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
-<body>
+<body class="">
+
+    <!-- 
+    - #PRELOADING
+    -->
+
+    <div class="loading" data-loading>
+        <img src="./assets/images/loading-santti.svg" width="100" height="100" alt="loading" class="img">
+        <!--<img src="./assets/images/loading-circle.svg" width="70" height="70" alt="" class="circle"> -->
+    </div>
+
+    <!-- 
+    - #HEADER
+    -->
 
   <header>
     <nav class="navbar">
@@ -42,5 +55,11 @@
   <footer>
     <p>&copy; 2024 Meu Site. Todos os direitos reservados.</p>
   </footer>
+
+    <!-- 
+    - custom js link
+    -->
+    <script src="./assets/js/script.js"></script>
+
 </body>
 </html>
