--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Original Junior Santti</title>
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <meta name="title" content="Junior Santti">
+  <meta name="description" content="This is a visual artist portfolio, made by Isadora Rocha.">
+
+  <link rel="stylesheet"  type="text/css" href="./assets/css/index.css">
+  <link rel="stylesheet" href="./assets/font/font.css">
 </head>
 
 <body class="">
